--- a/index.html
+++ b/index.html
@@ -4,172 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
+    <link rel="icon" type="image/png" href="assets/Logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            font-family: 'Poppins';
-        }
-
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: rgb(20, 20, 20);
-            margin: 0;
-        }
-        #clock {
-            font-size: 5vw;
-        }
-
-        @media (max-width: 600px) {
-            #clock {
-                font-size: 10vw;
-            }
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            position: relative;
-            background-color: rgb(20, 20, 20);
-            min-height: 500px;
-            align-items: center;
-            margin: 10px;
-            flex-direction: column;
-        }
-
-        .clock {
-            position: relative;
-            width: 470px;
-            height: 470px;
-            background-color: rgb(12, 12, 12);
-            border-radius: 50%;
-            box-shadow: 10px 50px 70px rgb(0, 0, 0),
-                inset 5px 5px 10px rgba(32, 32, 32),
-                inset 5px 5px 20px rgb(35, 35, 35),
-                inset -5px -5px 15px rgb(40, 40, 40);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 30px;
-        }
-
-        .clock::before {
-            content: '';
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background-color: #fff;
-            border: 4px #fff;
-            border-radius: 50%;
-            opacity: 75%;
-        }
-
-        .clock span {
-            position: absolute;
-            inset: 20px;
-            color: #fff;
-            text-align: center;
-            transform: rotate(calc(30deg*var(--i)));
-        }
-
-        .clock span b {
-            font-size: 2.2em;
-            opacity: 75%;
-            font-weight: 600;
-            display: inline-block;
-            transform: rotate(calc(-30deg*var(--i)));
-        }
-
-        .circle {
-            position: absolute;
-            width: 280px;
-            height: 280px;
-            border: 1px solid rgb(12, 12, 12);
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-        }
-
-        .circle i {
-            position: absolute;
-            width: 8px;
-            height: 50%;
-            background-color: #dbd8d8;
-        }
-
-        .circle2 {
-            width: 250px;
-            height: 250px;
-        }
-
-        .circle3 {
-            width: 220px;
-            height: 220px;
-        }
-
-        /* Digital clock style */
-        .digital {
-            position: relative;
-            width: 370px;
-            height: 200px;
-            border-radius: 30px;
-            background-color: rgb(12, 12, 12);
-            box-shadow: 10px 50px 70px rgb(0, 0, 0),
-                inset 5px 5px 10px rgba(32, 32, 32),
-                inset 5px 5px 20px rgb(35, 35, 35),
-                inset -5px -5px 15px rgb(40, 40, 40);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 30px;
-        }
-
-        #time {
-            margin-bottom: 40px;
-            display: flex;
-            padding: 10px 20px;
-            font-size: 2.2em;
-            color: #fff;
-            opacity: 75%;
-        }
-
-        #time div {
-            position: relative;
-            width: 70px;
-            text-align: center;
-            font-weight: 500;
-        }
-
-        #time div:nth-child(1)::after,
-        #time div:nth-child(2)::after {
-            content: ':';
-            position: absolute;
-            right: -4px;
-        }
-
-        #time div:nth-child(1)::after,
-        #time div:nth-child(2)::after {
-            animation: animate 1s steps(1) infinite;
-        }
-
-        @keyframes animate {
-            0% {
-                opacity: 1;
-            }
-
-            50% {
-                opacity: 0;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -201,51 +42,7 @@
 
         </div>
     </div>
-    <script>
-        let hr = document.querySelector('#hr');
-        let mn = document.querySelector('#mn');
-        let sc = document.querySelector('#sc');
-
-        setInterval(() => {
-            let day = new Date();
-            let hh = day.getHours() * 30;
-            let mm = day.getMinutes() * 6;
-            let ss = day.getSeconds() * 6;
-
-            hr.style.transform = `rotateZ(${hh + (mm / 12)}deg)`;
-            mn.style.transform = `rotateZ(${mm}deg)`;
-            sc.style.transform = `rotateZ(${ss}deg)`;
-
-            //Digital Clock
-            let hour = document.getElementById('hour');
-            let minutes = document.getElementById('minutes');
-            let seconds = document.getElementById('seconds');
-            let ampm = document.getElementById('ampm');
-
-            let h=new Date().getHours();
-            let m=new Date().getMinutes();
-            let s=new Date().getSeconds();
-            let am = h >= 12 ? 'PM' : 'AM';
-
-            //Convert 24 hr to 12 hr
-            if(h>12){
-                h=h-12;
-            }else if(h==0||h==12){
-                h=12;
-            }
-
-            //add zero before single digit no
-            h=(h<10)?"0"+h:h;
-            m=(m<10)?"0"+m:m;
-            s=(s<10)?"0"+s:s;
-
-            hour.innerHTML=h;
-            minutes.innerHTML=m;
-            seconds.innerHTML=s;
-            ampm.innerHTML=am;
-        }
-        )
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
